# watchdog

./: CMakeLists.txt  README.md
config/: watchdog_config.yaml
include/: ConfigLoader.h  WatchdogManager.h
include/PlatformAPI/: LinuxAPI.h  PlatformAPI.h
include/utils/: Logger.h
src/: ConfigLoader.cpp  WatchdogManager.cpp  main.cpp
src/PlatformAPI/: LinuxAPI.cpp
src/utils/: Logger.cpp
